WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303935
REGRESSION (
302241@main
): Media controls dimming element is too big after zooming
https://bugs.webkit.org/show_bug.cgi?id=303935
Summary
REGRESSION (302241@main): Media controls dimming element is too big after zoo...
Sammy Gill
Reported
2025-12-10 11:59:28 PST
Post
302241@main
, if you zoom in on some media controls, the container that holds the controls ends up getting sized much larger than the video itself
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2025-12-10 11:59:39 PST
rdar://166092545
Sammy Gill
Comment 2
2025-12-10 12:10:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55068
EWS
Comment 3
2025-12-11 09:01:18 PST
Committed
304299@main
(1807913583ff): <
https://commits.webkit.org/304299@main
> Reviewed commits have been landed. Closing PR #55068 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug